# cmake-examples

./: README.md  README.zh_hans.md
foundation/conditional/: CMakeLists.txt
foundation/function/: CMakeLists.txt
foundation/list/: CMakeLists.txt
foundation/loop/: CMakeLists.txt
multi-projects/: CMakeLists.txt  GroupFiles.cmake  IncludeDirectories.cmake
multi-projects/App/: CMakeLists.txt  main.cpp
multi-projects/Utils/: CMakeLists.txt
multi-projects/Utils/implementation/: utils.cpp
multi-projects/Utils/interfaces/: exports.h  utils.h
single-project/: CMakeLists.txt  main.cpp
single-project/utils/: utils.h
